<resources>

    <string name="app_name">MyCustomView</string>
    <string name="tab1">徽章测试</string>
    <string name="tab2">动画类型</string>
    <string name="tab3">页面3</string>
    <string name="tab4">页面4</string>

    <!-- tab选项名称 -->
    <string-array name="tab_names">
        <item>第一页</item>
        <item>第二页</item>
        <item>第三页</item>
        <item>第四页</item>
        <item>第五页</item>
        <item>第六页</item>
        <item>第七页</item>
        <item>第八页</item>
        <item>第九页</item>
        <item>第十页</item>
    </string-array>

    <string name="conversation1">扫一扫</string>
    <string name="conversation2">建讨论组</string>
    <string name="conversation3">面对面</string>
    <string name="conversation4">多人通话</string>
    <string name="conversation5">我的电脑</string>
    <string name="conversation6">加好友</string>
    <string name="small_snow">小雪</string>
    <string name="middle_snow">中雪</string>
    <string name="heavy_snow">大雪</string>

    <!-- 分享 -->
    <string name="share">分享</string>
    <string name="share_title">分享到</string>
    <string name="moments">朋友圈</string>
    <string name="wechat">微信好友</string>
    <string name="weibo">新浪微博</string>
    <string name="qq">QQ</string>
    <string name="qzone">QQ空间</string>

    <!-- button -->
    <string name="horizontal_single">横向单行</string>
    <string name="horizontal_multi">横向多行</string>
    <string name="vertical">竖向</string>
    <string name="grid">网格</string>

    <!-- item -->
    <string name="delete">删除</string>
    <string name="add_item">添加</string>
    <string name="source_on_github">Github位置</string>
    <string name="title_item">功能</string>
    <string name="tip">为保证悬浮球正常使用，请将其加入系统清理白名单</string>
    <string name="sync">Sync</string>
    <string name="alarm">Alarm</string>
    <string name="camera">Camera</string>
    <!-- picker -->
    <string name="picker_time">时间选择器</string>
    <string name="picker_province">条件选择器</string>
    <string name="picker_custom_time">时间选择器自定义布局</string>
    <string name="picker_custom_province">条件选择器自定义布局</string>

    <!-- vflow -->
    <string-array name="vflow_titles">
        <item> 您的订单开始处理</item>
        <item> 您的订单待配货</item>
        <item> 您的包裹已经出库</item>
        <item> 包裹正在等待揽收</item>
        <item> [北京市]百世快递 MKT-北京翰林腾跃项目收件员已揽件</item>
        <item> 北京市转运中心 已发出</item>
        <item> [北京市]快件已到达北京转运中心</item>
        <item> [石家庄市]快件已到达石家庄转运中心</item>
        <item> [石家庄市]快件已到达正定</item>
        <item> [石家庄市]正定派件员: 张某某 123456789正在为您派件</item>
    </string-array>
    <string-array name="vflow_times">
        <item>2017–02-12 09:19:56</item>
        <item>2017–02-12 09:50:43</item>
        <item>2017–02-12 10:19:52</item>
        <item>2017–02-12 10:30:23</item>
        <item>2017–02-12 17:19:14</item>
        <item>2017–02-13 03:23:51</item>
        <item>2017–02-13 03:33:21</item>
        <item>2017–02-13 15:23:51</item>
        <item>2017–02-14 07:51:15</item>
        <item>2017–02-14 09:37:26</item>
    </string-array>
    <string-array name="hflow">
        <item>提交</item>
        <item>接单</item>
        <item>取件</item>
        <item>配送</item>
        <item>异常</item>
    </string-array>
    <string-array name="hflow6">
        <item>提交</item>
        <item>接单</item>
        <item>取件</item>
        <item>配送</item>
        <item>完成</item>
    </string-array>
    <string-array name="htime5">
        <item>15:20</item>
        <item>15:37</item>
        <item>15:12</item>
        <item>15:24</item>
    </string-array>
    <string-array name="htime6">
        <item>15:20</item>
        <item>15:37</item>
        <item>15:12</item>
        <item>15:24</item>
        <item>16:23</item>
    </string-array>
    <!-- alert -->
    <string name="default_alert">Default Alert</string>
    <string name="coloured_alert">Coloured Alert</string>
    <string name="text_only_alert">Text Only Alert</string>
    <string name="on_click_alert">On Click Alert</string>
    <string name="verbose_alert">Verbose Alert</string>
    <string name="custom_icon_alert">Custom Icon Alert</string>
    <string name="callback_alert">Alert Callbacks</string>

    
    <string name="cookie_title">这是一个标题</string>
    <string name="cookie_message">咦？你又变帅了！！！</string>
    <string name="cookie_action">点击一下</string>
    
    
    <string name="t5">UIRippleButton
                drakeet:ripple_color=\"#eeeeee\"
                drakeet:ripple_duration=\"500\"
                drakeet:shape_type=\"round\"
                drakeet:color_unpressed=\"#f44336\"
    </string>
    <string name="t4">UIRippleButton
                drakeet:ripple_color=\"#8a87ee\"
                drakeet:ripple_duration=\"500\"
                drakeet:shape_type=\"rectangle\"
                drakeet:color_unpressed=\"#f44336\"</string>
    <string name="t3">UIImageView\ndrakeet:shape_type=\"round\"</string>
    <string name="t2">UIButton\ndrakeet:shape_type=\"round\"</string>
    <string name="t1">UIButton\ndrakeet:radius=\"6dp\"</string>
    <string name="t0">UIButton\ndrakeet:alpha_pressed=\"40\"\ndrakeet:color_pressed=\"#0303ff\"\ndrakeet:color_unpressed=\"#8aacee\"</string>
</resources>