<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_Time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:text="@string/picker_time" />

    <Button
        android:id="@+id/btn_Options"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tvTime"
        android:layout_margin="20dp"
        android:text="@string/picker_province" />

    <Button
        android:id="@+id/btn_CustomTime"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tvTime"
        android:layout_margin="20dp"
        android:text="@string/picker_custom_time" />

    <Button
        android:id="@+id/btn_CustomOptions"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tvTime"
        android:layout_margin="20dp"
        android:text="@string/picker_custom_province" />

    <Button
        android:id="@+id/btn_GotoJsonData"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/tvTime"
        android:layout_margin="20dp"
        android:text="省市区Json文件解析示例" />

</LinearLayout>