<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <com.xuexiang.view.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/button1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:orientation="vertical" >

            <com.xuexiang.view.custom.SwitchIconView
                android:id="@+id/switchIconView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                app:si_animation_duration="500"
                app:si_disabled_alpha=".5"
                app:si_disabled_color="#b7b7b7"
                app:si_enabled="false"
                app:si_no_dash="true"
                app:si_tint_color="#ff3c00"
                app:srcCompat="@drawable/ic_cloud" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="24dp"
            android:background="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:orientation="vertical" >

            <com.xuexiang.view.custom.SwitchIconView
                android:id="@+id/switchIconView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:scaleType="fitXY"
                app:si_tint_color="#7956f9"
                app:srcCompat="@drawable/ic_timer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="24dp"
            android:background="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:orientation="vertical" >

            <com.xuexiang.view.custom.SwitchIconView
                android:id="@+id/switchIconView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                app:si_disabled_alpha=".5"
                app:si_disabled_color="#dadada"
                app:si_enabled="false"
                app:si_tint_color="#ffb700"
                app:srcCompat="@drawable/ic_camera" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>